# ztare

./: .gitignore  ARCHITECTURE.md  DECISION_LOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
benchmarks/constraint_memory/: README.md  historical_candidate_review.md  mine_auxiliary_historical.py  mine_claim_test_mismatch.py  mine_specimens.py  run_benchmark.py
config/: README.md
config/prompts/: compile_evidence.md  derive_brief_decision_brief.md  derive_brief_founder_memo.md  derive_brief_quantitative_appendix.md  draft_primitive.md  extract_ledger.md  extract_source_note.md  merge_workspace.md  qa_artifact.md  refine_founder_memo.md  sniff_context.md  summarize_history.md
config/renderers/: architectural_memo.md  decision_brief.md  founder_memo.md  quantitative_appendix.md  research_note.md
docs/: ARCHITECTURE.md  BENCHMARK_CHECKLIST.md  WORKFLOW.md
global_primitives/: README.md  primitive_candidate.schema.json  primitive_incident.schema.json
global_primitives/approved/: cooked_books.json  (+16 more)
paper/: README.md  draft.md  main.tex
papers/: README.md
research_areas/: README.md  seed_registry.json
rubrics/: central_station.json  central_station_product.json  constraint_memory_benchmark.json  dynamic_central_station.json  dynamic_epistemic_engine_v4.json  dynamic_epistemic_engine_v4_bridge_hardening.json  epistemic_engine_v4.json  eu_union_integration.json  hbr_strategy.json  startup_experiment_design.json
src/: __init__.py
supervisor/: README.md  USER_MANUAL.md  agent_wrappers.json  model_pricing.json  program_registry.json
(+382 files in other folders)
